--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.ow2.asm:asm:7.0'
+
 }
