--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,6 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     compile "org.ow2.asm:asm-tree:7.0"
     compile "org.ow2.asm:asm-util:7.0"
+    compile 'com.google.guava:guava:27.0.1-jre'
     compileOnly "org.projectlombok:lombok:1.16.16"
 }
